feat(its now possible to run this project in jenkins) (#14)
* feat(added env var for jvmArgs)

* feat(added env var for jvmArgs)